# selenium-utils

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.coder/: extensions.sh  python.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  create-tag-major.yaml  create-tag-minor.yaml  create-tag-patch.yaml  create-tag.yaml  future-ci.yaml  release.yaml
selenium_utils/: archive.py  browser.py  config.py  discord.py  exceptions.py  log.py  misc.py  pyproject.toml  runner.py  selectors.py
selenium_utils/.github/workflows/: ci.yaml  future-ci.yaml
